fix: ensure codeblock tabs works on mobile in waves theme

--- a/packages/react-saasify/src/themes/waves.module.css
+++ b/packages/react-saasify/src/themes/waves.module.css
@@ -417,6 +417,7 @@ footer .link:hover {
   font-size: 16px;
   font-family: 'SFMono-Regular', Consolas, 'Liberation Mono', Menlo, Courier,
     monospace;
+  white-space: nowrap;
 }
 
 .live-service-demo .tabs {
@@ -427,10 +428,12 @@ footer .link:hover {
   padding-top: var(--space-m);
   padding-left: var(--space-l);
   padding-right: var(--space-l);
+  overflow-x: scroll;
 }
 
 .live-service-demo .tabs .tab:first-of-type {
   margin-left: auto;
+  padding-left: var(--space-xl);
 }
 
 .live-service-demo .tabs .tab:hover {
